fix navbar aside overflow x

--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -11,7 +11,7 @@
 }
 
 .navbar-aside {
-  @apply right-0; 
+  @apply h-screen w-[300px];
 }
 
 input {
